pihole-default.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole-default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole-default
  name: pihole-default
  namespace: pihole-default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pihole-default
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pihole-default
    spec:
      containers:
        - env:
            - name: TZ
              value: US/Central
            - name: WEBPASSWORD
              value: Letmein1!
            - name: DNS1
              value: 185.228.168.168
            - name: DNS2
              value: 185.228.169.168
            - name: CONDITIONAL_FORWARDING
              value: "true"
            - name: CONDITIONAL_FORWARDING_DOMAIN
              value: webster.home
            #- name: CONDITIONAL_FORWARDING_IP
            #value: 192.168.1.254
          image: pihole/pihole:4.3.2-1
          imagePullPolicy: IfNotPresent
          name: pihole-default
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dchp
              containerPort: 67
              protocol: UDP
            - name: web
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          #resources:
          #requests:
          #cpu: "20m"
          #memory: "512Mi"
          #limits:
          #cpu: "250m"
          #memory: "896Mi"
          readinessProbe:
            exec:
              command: ["dig", "@127.0.0.1", "cnn.com"]
            timeoutSeconds: 20
            initialDelaySeconds: 5
            periodSeconds: 60
          livenessProbe:
            tcpSocket:
              port: dns-tcp
            initialDelaySeconds: 15
            periodSeconds: 30
          volumeMounts:
            - name: etc-pihole
              mountPath: /etc/pihole
            - name: etc-dnsmasq
              mountPath: /etc/dnsmasq.d
            - name: var-log
              mountPath: /var/log
            - name: var-log-lighttpd
              mountPath: /var/log/lighttpd
            - name: ftlconf
              mountPath: /etc/pihole/pihole-FTL.conf
              subPath: pihole-FTL.conf
            - name: regex
              mountPath: /etc/pihole/regex.list
              subPath: regex.list
            - name: whitelist
              mountPath: /etc/pihole/whitelist.txt
              subPath: whitelist.txt
            - name: adlists
              mountPath: /etc/pihole/adlists.list
              subPath: adlists.list
      restartPolicy: Always
      volumes:
        - name: etc-pihole
          emptyDir:
            medium: Memory
        - name: etc-dnsmasq
          emptyDir:
            medium: Memory
        - name: var-log
          emptyDir:
            medium: Memory
        - name: var-log-lighttpd
          emptyDir:
            medium: Memory
        - name: ftlconf
          configMap:
            name: pihole-ftl.conf
            items:
              - key: pihole-FTL.conf
                path: pihole-FTL.conf
        - name: regex
          configMap:
            name: regex.list
            items:
              - key: regex.list
                path: regex.list
        - name: whitelist
          configMap:
            name: whitelist.txt
            items:
              - key: whitelist.txt
                path: whitelist.txt
        - name: adlists
          configMap:
            name: adlists.list
            items:
              - key: adlists.list
                path: adlists.list
---
kind: Service
apiVersion: v1
metadata:
  name: pihole-udp
  namespace: pihole-default
  annotations:
    #metallb.universe.tf/allow-shared-ip: dns
    kubernetes.digitalocean.com/load-balancer-id: "dns"
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "2"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
    #metallb.universe.tf/allow-shared-ip: dns
spec:
  selector:
    app: pihole-default
  ports:
    - protocol: UDP
      port: 53
      name: udp
      targetPort: 53
  type: LoadBalancer
  #loadBalancerIP: 192.168.1.140
---
kind: Service
apiVersion: v1
metadata:
  name: pihole-tcp
  namespace: pihole-default
  annotations:
    #metallb.universe.tf/allow-shared-ip: dns
    kubernetes.digitalocean.com/load-balancer-id: "dns"
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "2"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
spec:
  selector:
    app: pihole-default
  ports:
    - protocol: TCP
      port: 53
      name: dnstcp
      targetPort: 53
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
  type: LoadBalancer
  #loadBalancerIP: 192.168.1.140
