kubernetes-homeassistant.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      nodeName: princess-celestia
      volumes:
        - name: ha-storage
          nfs:
            server: mnemosyne.arkane-systems.lan
            path: "/swarm/harmony/homeassistant/ha"
        - name: ha-mysql-storage
          hostPath:
            path: /opt/ha-mysql
            type: DirectoryOrCreate
      containers:
        - image: ghcr.io/home-assistant/home-assistant:stable
          name: home-assistant
          volumeMounts:
            - mountPath: "/config"
              name: ha-storage
        - image: mysql:latest
          name: mysql
          volumeMounts:
            - name: ha-mysql-storage
              mountPath: /var/lib/mysql
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: jeeves.harmony.arkane-systems.lan
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
    - host: automation.arkane-systems.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
